--- a/Projet tutoré - Monades en Suspension/src/view/UIView.fxml
+++ b/Projet tutoré - Monades en Suspension/src/view/UIView.fxml
@@ -1,35 +1,30 @@
-<!--
- * @aim Describe the UIView
- * 
- * @date 30/01/2015
- * @author Etanlink
- * @version 0.0
- *
- -->
-
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.canvas.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
+          <Menu mnemonicParsing="false" text="Fichier">
             <items>
               <MenuItem mnemonicParsing="false" text="Close" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
+          <Menu mnemonicParsing="false" text="Aide">
             <items>
               <MenuItem mnemonicParsing="false" text="Delete" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Help">
+          <Menu mnemonicParsing="false" text="À propos">
             <items>
               <MenuItem mnemonicParsing="false" text="About" />
             </items>
@@ -37,4 +32,62 @@
         </menus>
       </MenuBar>
    </top>
+   <center>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <SplitPane dividerPositions="0.706766917293233" prefHeight="575.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+              <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                     <children>
+                        <TitledPane animated="false" layoutX="164.0" layoutY="57.0" prefHeight="573.0" prefWidth="561.0" text="Animation" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="206.0" prefWidth="62.0">
+                                 <children>
+                                    <Circle fill="DODGERBLUE" layoutX="96.0" layoutY="85.0" radius="55.0" stroke="BLACK" strokeType="INSIDE" />
+                                    <Circle fill="DODGERBLUE" layoutX="454.0" layoutY="445.0" radius="54.0" stroke="BLACK" strokeType="INSIDE" />
+                                    <Circle fill="DODGERBLUE" layoutX="137.0" layoutY="323.0" radius="41.0" stroke="BLACK" strokeType="INSIDE" />
+                                    <Circle fill="DODGERBLUE" layoutX="400.0" layoutY="118.0" radius="41.0" stroke="BLACK" strokeType="INSIDE" />
+                                    <Circle fill="DODGERBLUE" layoutX="273.0" layoutY="408.0" radius="29.0" stroke="BLACK" strokeType="INSIDE" />
+                                    <Circle fill="DODGERBLUE" layoutX="302.0" layoutY="200.0" radius="29.0" stroke="BLACK" strokeType="INSIDE" />
+                                    <Circle fill="DODGERBLUE" layoutX="412.0" layoutY="271.0" radius="29.0" stroke="BLACK" strokeType="INSIDE" />
+                                    <Circle fill="DODGERBLUE" layoutX="82.0" layoutY="455.0" radius="55.0" stroke="BLACK" strokeType="INSIDE" />
+                                    <Circle fill="DODGERBLUE" layoutX="244.0" layoutY="77.0" radius="41.0" stroke="BLACK" strokeType="INSIDE" />
+                                    <Label layoutX="117.0" layoutY="256.0" text="Je suis une monade !">
+                                       <font>
+                                          <Font size="20.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                           <font>
+                              <Font name="Calibri" size="16.0" />
+                           </font>
+                        </TitledPane>
+                     </children>
+                  </AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                     <children>
+                        <TitledPane animated="false" layoutX="15.0" layoutY="69.0" prefHeight="573.0" prefWidth="231.0" text="Paramètres de l'animation" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <TextField layoutX="14.0" layoutY="14.0" prefHeight="29.0" prefWidth="162.0" text="Pourcentage de Monades" />
+                                    <Slider layoutX="14.0" layoutY="50.0" prefHeight="19.0" prefWidth="161.0" />
+                                    <Button layoutX="55.0" layoutY="453.0" mnemonicParsing="false" text="Lancer l'animation" />
+                                    <Button layoutX="29.0" layoutY="493.0" mnemonicParsing="false" text="Mettre en pause l'animation" />
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                           <font>
+                              <Font name="Calibri" size="16.0" />
+                           </font>
+                        </TitledPane>
+                     </children>
+                  </AnchorPane>
+              </items>
+            </SplitPane>
+         </children>
+      </AnchorPane>
+   </center>
 </BorderPane>
