--- a/Projet tutoré - Monades en Suspension/src/view/UIView.fxml
+++ b/Projet tutoré - Monades en Suspension/src/view/UIView.fxml
@@ -44,19 +44,14 @@
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="206.0" prefWidth="62.0">
                                  <children>
                                     <Circle fill="DODGERBLUE" layoutX="96.0" layoutY="85.0" radius="55.0" stroke="BLACK" strokeType="INSIDE" />
-                                    <Circle fill="DODGERBLUE" layoutX="454.0" layoutY="445.0" radius="54.0" stroke="BLACK" strokeType="INSIDE" />
-                                    <Circle fill="DODGERBLUE" layoutX="137.0" layoutY="323.0" radius="41.0" stroke="BLACK" strokeType="INSIDE" />
+                                    <Circle fill="#901fff" layoutX="454.0" layoutY="445.0" radius="54.0" stroke="BLACK" strokeType="INSIDE" />
+                                    <Circle fill="#1fff88" layoutX="151.0" layoutY="271.0" radius="41.0" stroke="BLACK" strokeType="INSIDE" />
                                     <Circle fill="DODGERBLUE" layoutX="400.0" layoutY="118.0" radius="41.0" stroke="BLACK" strokeType="INSIDE" />
-                                    <Circle fill="DODGERBLUE" layoutX="273.0" layoutY="408.0" radius="29.0" stroke="BLACK" strokeType="INSIDE" />
-                                    <Circle fill="DODGERBLUE" layoutX="302.0" layoutY="200.0" radius="29.0" stroke="BLACK" strokeType="INSIDE" />
-                                    <Circle fill="DODGERBLUE" layoutX="412.0" layoutY="271.0" radius="29.0" stroke="BLACK" strokeType="INSIDE" />
-                                    <Circle fill="DODGERBLUE" layoutX="82.0" layoutY="455.0" radius="55.0" stroke="BLACK" strokeType="INSIDE" />
-                                    <Circle fill="DODGERBLUE" layoutX="244.0" layoutY="77.0" radius="41.0" stroke="BLACK" strokeType="INSIDE" />
-                                    <Label layoutX="117.0" layoutY="256.0" text="Je suis une monade !">
-                                       <font>
-                                          <Font size="20.0" />
-                                       </font>
-                                    </Label>
+                                    <Circle fill="#728ca4" layoutX="273.0" layoutY="408.0" radius="29.0" stroke="BLACK" strokeType="INSIDE" />
+                                    <Circle fill="DODGERBLUE" layoutX="296.0" layoutY="300.0" radius="29.0" stroke="BLACK" strokeType="INSIDE" />
+                                    <Circle fill="#f1ff1f" layoutX="412.0" layoutY="271.0" radius="29.0" stroke="BLACK" strokeType="INSIDE" />
+                                    <Circle fill="#ff4a1f" layoutX="82.0" layoutY="455.0" radius="55.0" stroke="BLACK" strokeType="INSIDE" />
+                                    <Circle fill="#ff1f1f" layoutX="244.0" layoutY="77.0" radius="41.0" stroke="BLACK" strokeType="INSIDE" />
                                  </children>
                               </AnchorPane>
                           </content>
@@ -72,10 +67,20 @@
                           <content>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <TextField layoutX="14.0" layoutY="14.0" prefHeight="29.0" prefWidth="162.0" text="Pourcentage de Monades" />
-                                    <Slider layoutX="14.0" layoutY="50.0" prefHeight="19.0" prefWidth="161.0" />
-                                    <Button layoutX="55.0" layoutY="453.0" mnemonicParsing="false" text="Lancer l'animation" />
-                                    <Button layoutX="29.0" layoutY="493.0" mnemonicParsing="false" text="Mettre en pause l'animation" />
+                                    <Slider blockIncrement="1.0" layoutX="14.0" layoutY="50.0" majorTickUnit="1.0" max="10.0" min="3.0" minorTickCount="1" prefHeight="19.0" prefWidth="161.0" showTickLabels="true" showTickMarks="true" value="3.0" />
+                                    <Button layoutX="53.0" layoutY="279.0" mnemonicParsing="false" text="Lancer l'animation" />
+                                    <Button layoutX="29.0" layoutY="322.0" mnemonicParsing="false" text="Mettre en pause l'animation" />
+                                    <Label layoutX="29.0" layoutY="24.0" text="Nombre minimum de monades" />
+                                    <Slider blockIncrement="1.0" layoutX="14.0" layoutY="116.0" majorTickUnit="10.0" minorTickCount="10" prefHeight="19.0" prefWidth="161.0" showTickLabels="true" showTickMarks="true" value="10.0" />
+                                    <Label layoutX="22.0" layoutY="82.0" text="Pourcentage de petite monade" />
+                                    <Label layoutX="22.0" layoutY="148.0" text="Pourcentage de moyenne monade" />
+                                    <Slider blockIncrement="1.0" layoutX="14.0" layoutY="178.0" majorTickUnit="10.0" minorTickCount="10" prefHeight="0.0" prefWidth="161.0" showTickLabels="true" showTickMarks="true" value="10.0" />
+                                    <Label layoutX="22.0" layoutY="212.0" text="Pourcentage de grande monade" />
+                                    <Slider blockIncrement="1.0" layoutX="14.0" layoutY="237.0" majorTickUnit="10.0" minorTickCount="10" prefHeight="19.0" prefWidth="161.0" showTickLabels="true" showTickMarks="true" value="10.0" />
+                                    <Button layoutX="12.0" layoutY="450.0" mnemonicParsing="false" text="Capture d'écran" />
+                                    <TextField layoutX="12.0" layoutY="415.0" prefHeight="29.0" prefWidth="165.0" />
+                                    <Label layoutX="15.0" layoutY="391.0" text="Dossier cible :" />
+                                    <Button layoutX="179.0" layoutY="415.0" mnemonicParsing="false" text="..." />
                                  </children>
                               </AnchorPane>
                           </content>
