--- a/Projet tutoré - Monades en Suspension/src/adress/view/FUCK.fxml
+++ b/Projet tutoré - Monades en Suspension/src/adress/view/FUCK.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.UIViewControler">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="adress.view.UIViewControler">
    <children>
       <SplitPane dividerPositions="0.706766917293233" prefHeight="575.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <items>
@@ -20,7 +20,7 @@
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="206.0" prefWidth="62.0">
                            <children>
-                              <Circle fill="DODGERBLUE" layoutX="96.0" layoutY="85.0" radius="55.0" stroke="BLACK" strokeType="INSIDE" />
+                              <Circle fx:id="cercle" fill="DODGERBLUE" layoutX="96.0" layoutY="85.0" radius="55.0" stroke="BLACK" strokeType="INSIDE" />
                               <Circle fill="#901fff" layoutX="454.0" layoutY="445.0" radius="54.0" stroke="BLACK" strokeType="INSIDE" />
                               <Circle fill="#1fff88" layoutX="151.0" layoutY="271.0" radius="41.0" stroke="BLACK" strokeType="INSIDE" />
                               <Circle fill="DODGERBLUE" layoutX="400.0" layoutY="118.0" radius="41.0" stroke="BLACK" strokeType="INSIDE" />
