Add an Id for each button and initialized the method of each Buttons

--- a/Projet tutoré - Monades en Suspension/src/adress/view/FUCK.fxml
+++ b/Projet tutoré - Monades en Suspension/src/adress/view/FUCK.fxml
@@ -46,7 +46,7 @@
                            <children>
                               <Slider blockIncrement="1.0" layoutX="14.0" layoutY="50.0" majorTickUnit="1.0" max="10.0" min="3.0" minorTickCount="1" prefHeight="19.0" prefWidth="161.0" showTickLabels="true" showTickMarks="true" value="3.0" />
                               <Button fx:id="BoutonAnimation" layoutX="53.0" layoutY="279.0" mnemonicParsing="false" onAction="#handlerAnimerCercle" text="Lancer l'animation" />
-                              <Button layoutX="29.0" layoutY="322.0" mnemonicParsing="false" text="Mettre en pause l'animation" />
+                              <Button fx:id="BoutonPause" layoutX="29.0" layoutY="322.0" mnemonicParsing="false" onAction="#handlerPauseAnimation" text="Mettre en pause l'animation" />
                               <Label layoutX="29.0" layoutY="24.0" text="Nombre minimum de monades" />
                               <Slider blockIncrement="1.0" layoutX="14.0" layoutY="116.0" majorTickUnit="10.0" minorTickCount="10" prefHeight="19.0" prefWidth="161.0" showTickLabels="true" showTickMarks="true" value="10.0" />
                               <Label layoutX="22.0" layoutY="82.0" text="Pourcentage de petites monades" />
@@ -54,10 +54,10 @@
                               <Slider blockIncrement="1.0" layoutX="14.0" layoutY="178.0" majorTickUnit="10.0" minorTickCount="10" prefHeight="0.0" prefWidth="161.0" showTickLabels="true" showTickMarks="true" value="10.0" />
                               <Label layoutX="22.0" layoutY="212.0" text="Pourcentage de grandes monades" />
                               <Slider blockIncrement="1.0" layoutX="14.0" layoutY="237.0" majorTickUnit="10.0" minorTickCount="10" prefHeight="19.0" prefWidth="161.0" showTickLabels="true" showTickMarks="true" value="10.0" />
-                              <Button layoutX="12.0" layoutY="450.0" mnemonicParsing="false" text="Capture d'écran" />
+                              <Button fx:id="BoutonCapture" layoutX="12.0" layoutY="450.0" mnemonicParsing="false" onAction="#handlerCaptureEcran" text="Capture d'écran" />
                               <TextField layoutX="12.0" layoutY="415.0" prefHeight="29.0" prefWidth="165.0" />
                               <Label layoutX="15.0" layoutY="391.0" text="Dossier cible :" />
-                              <Button layoutX="179.0" layoutY="415.0" mnemonicParsing="false" text="..." />
+                              <Button fx:id="BoutonDossier" layoutX="179.0" layoutY="415.0" mnemonicParsing="false" onAction="#handlerChoisirDossier" text="..." />
                            </children>
                         </AnchorPane>
                      </content>
