--- a/Projet tutoré - Monades en Suspension/src/adress/view/FUCK.fxml
+++ b/Projet tutoré - Monades en Suspension/src/adress/view/FUCK.fxml
@@ -14,30 +14,7 @@
    <children>
       <SplitPane dividerPositions="0.706766917293233" prefHeight="575.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <items>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-               <children>
-                  <TitledPane animated="false" layoutX="164.0" layoutY="57.0" prefHeight="573.0" prefWidth="561.0" text="Animation" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="206.0" prefWidth="62.0">
-                           <children>
-                              <Circle fx:id="cercle" fill="DODGERBLUE" layoutX="96.0" layoutY="85.0" radius="55.0" stroke="BLACK" strokeType="INSIDE" />
-                              <Circle fill="#901fff" layoutX="454.0" layoutY="445.0" radius="54.0" stroke="BLACK" strokeType="INSIDE" />
-                              <Circle fill="#1fff88" layoutX="151.0" layoutY="271.0" radius="41.0" stroke="BLACK" strokeType="INSIDE" />
-                              <Circle fill="DODGERBLUE" layoutX="400.0" layoutY="118.0" radius="41.0" stroke="BLACK" strokeType="INSIDE" />
-                              <Circle fill="#728ca4" layoutX="273.0" layoutY="408.0" radius="29.0" stroke="BLACK" strokeType="INSIDE" />
-                              <Circle fill="DODGERBLUE" layoutX="296.0" layoutY="300.0" radius="29.0" stroke="BLACK" strokeType="INSIDE" />
-                              <Circle fill="#f1ff1f" layoutX="412.0" layoutY="271.0" radius="29.0" stroke="BLACK" strokeType="INSIDE" />
-                              <Circle fill="#ff4a1f" layoutX="82.0" layoutY="455.0" radius="55.0" stroke="BLACK" strokeType="INSIDE" />
-                              <Circle fill="#ff1f1f" layoutX="244.0" layoutY="77.0" radius="41.0" stroke="BLACK" strokeType="INSIDE" />
-                           </children>
-                        </AnchorPane>
-                     </content>
-                     <font>
-                        <Font name="Calibri" size="16.0" />
-                     </font>
-                  </TitledPane>
-               </children>
-            </AnchorPane>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
                   <TitledPane animated="false" layoutX="15.0" layoutY="69.0" prefHeight="573.0" prefWidth="231.0" text="Paramètres de l'animation" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
