--- a/Projet tutoré - Monades en Suspension/src3/adress/model/VBox.fxml
+++ b/Projet tutoré - Monades en Suspension/src3/adress/model/VBox.fxml
@@ -6,30 +6,54 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="380.0" prefWidth="462.0" style="-fx-background-color: #be9b7b;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="adress.model.WindowImpl">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="224.0" style="-fx-background-color: #c9c7c7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="adress.model.WindowImpl">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="468.0" text="Nombre minimum de monades" />
-      <Slider blockIncrement="1.0" majorTickUnit="1.0" max="10.0" min="3.0" prefHeight="38.0" prefWidth="447.0" showTickLabels="true" showTickMarks="true" value="3.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="468.0" text="Pourcentage de petites monades" />
-      <Slider blockIncrement="25.0" prefHeight="38.0" prefWidth="447.0" showTickLabels="true" showTickMarks="true" />
-      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="468.0" text="Pourcentage de monades moyennes" />
-      <Slider prefHeight="38.0" prefWidth="447.0" showTickLabels="true" showTickMarks="true" />
-      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="468.0" text="Pourcentage de grandes monades" />
-      <Slider prefHeight="38.0" prefWidth="447.0" showTickLabels="true" showTickMarks="true" />
-      <Button alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="134.0" text="Lancer l'animation">
+      <Slider blockIncrement="1.0" majorTickUnit="1.0" max="10.0" min="3.0" prefHeight="38.0" prefWidth="447.0" showTickLabels="true" showTickMarks="true" value="3.0">
          <VBox.margin>
             <Insets bottom="5.0" top="10.0" />
+         </VBox.margin></Slider>
+      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="468.0" text="Pourcentage de petites monades">
+         <VBox.margin>
+            <Insets bottom="5.0" top="5.0" />
+         </VBox.margin></Label>
+      <Slider blockIncrement="25.0" prefHeight="38.0" prefWidth="447.0" showTickLabels="true" showTickMarks="true">
+         <VBox.margin>
+            <Insets bottom="5.0" top="5.0" />
+         </VBox.margin></Slider>
+      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="468.0" text="Pourcentage de monades moyennes">
+         <VBox.margin>
+            <Insets bottom="5.0" top="5.0" />
+         </VBox.margin></Label>
+      <Slider prefHeight="38.0" prefWidth="447.0" showTickLabels="true" showTickMarks="true">
+         <VBox.margin>
+            <Insets bottom="5.0" top="5.0" />
+         </VBox.margin></Slider>
+      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="468.0" text="Pourcentage de grandes monades">
+         <VBox.margin>
+            <Insets bottom="5.0" top="5.0" />
+         </VBox.margin></Label>
+      <Slider prefHeight="38.0" prefWidth="447.0" showTickLabels="true" showTickMarks="true">
+         <VBox.margin>
+            <Insets bottom="5.0" top="5.0" />
+         </VBox.margin></Slider>
+      <Button alignment="CENTER" mnemonicParsing="false" onAction="#LancerAnimationHandler" prefHeight="25.0" prefWidth="134.0" text="Lancer l'animation">
+         <VBox.margin>
+            <Insets bottom="10.0" left="40.0" top="20.0" />
          </VBox.margin>
       </Button>
       <Button alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="165.0" text="Mettre en pause l'animation">
          <VBox.margin>
-            <Insets bottom="5.0" top="5.0" />
+            <Insets bottom="10.0" left="25.0" top="10.0" />
          </VBox.margin>
       </Button>
       <Button alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="191.0" text="Capturer l'animation en cours">
          <VBox.margin>
-            <Insets top="5.0" />
+            <Insets left="15.0" top="10.0" />
          </VBox.margin>
       </Button>
    </children>
+   <padding>
+      <Insets top="30.0" />
+   </padding>
 </VBox>
