--- a/Projet tutoré - Monades en Suspension/src3/adress/model/VBox.fxml
+++ b/Projet tutoré - Monades en Suspension/src3/adress/model/VBox.fxml
@@ -9,10 +9,11 @@
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="224.0" style="-fx-background-color: #c9c7c7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="adress.model.WindowImpl">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="468.0" text="Nombre minimum de monades" />
-      <Slider blockIncrement="1.0" majorTickUnit="1.0" max="10.0" min="3.0" prefHeight="38.0" prefWidth="447.0" showTickLabels="true" showTickMarks="true" value="3.0">
+      <Slider fx:id="Slider1" blockIncrement="1.0" majorTickUnit="1.0" max="10.0" min="3.0" onDragDetected="#DragHandler" prefHeight="38.0" prefWidth="447.0" showTickLabels="true" showTickMarks="true" value="3.0">
          <VBox.margin>
             <Insets bottom="5.0" top="10.0" />
          </VBox.margin></Slider>
+      <TextField fx:id="textTest" prefHeight="25.0" prefWidth="153.0" />
       <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="468.0" text="Pourcentage de petites monades">
          <VBox.margin>
             <Insets bottom="5.0" top="5.0" />
@@ -37,7 +38,7 @@
          <VBox.margin>
             <Insets bottom="5.0" top="5.0" />
          </VBox.margin></Slider>
-      <Button alignment="CENTER" mnemonicParsing="false" onAction="#LancerAnimationHandler" prefHeight="25.0" prefWidth="134.0" text="Lancer l'animation">
+      <Button fx:id="BoutonLancerAnim" alignment="CENTER" mnemonicParsing="false" onAction="#LancerAnimationHandler" prefHeight="25.0" prefWidth="134.0" text="Lancer l'animation">
          <VBox.margin>
             <Insets bottom="10.0" left="40.0" top="20.0" />
          </VBox.margin>
